--- a/memorygame-UI/src/app/components/board/board.component.scss
+++ b/memorygame-UI/src/app/components/board/board.component.scss
@@ -15,10 +15,11 @@
     -webkit-backdrop-filter: blur(20px);
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.18);
+    transition: all .3s ease-out;
     z-index: 0;
 }
 
-.box::before {
+.box-closed::after {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -32,5 +33,6 @@
     border-radius: 10px;
     color: #fff;
     font-size: 24px;
-    background-color: #3F51B5;
+    background: #3F51B5;
+    cursor: pointer;
 }
